--- a/Term Project/Heinen_DSC540_Milestone_2.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 989,
+   "execution_count": 3,
    "id": "1b5ceb58-5f0c-4865-8ab2-2bf37263ba82",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 991,
+   "execution_count": 5,
    "id": "406a121f-e199-4644-911f-66c701722e8f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 992,
+   "execution_count": 6,
    "id": "1d62befc-8b02-417d-835e-60d25d62cb62",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        "[5 rows x 94 columns]"
       ]
      },
-     "execution_count": 992,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 995,
+   "execution_count": 9,
    "id": "79b0ce27-a16b-4b73-bc0b-3a2ff37845c7",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 996,
+   "execution_count": 10,
    "id": "19c760b0-d97c-48aa-a89c-98611f2169a6",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "(2831, 85)"
       ]
      },
-     "execution_count": 996,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 997,
+   "execution_count": 11,
    "id": "e874cb26-daee-4504-89f1-7ddf473f3b26",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "(2831, 77)"
       ]
      },
-     "execution_count": 997,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 999,
+   "execution_count": 13,
    "id": "11577282-b020-406b-9e47-7296cf2a6e63",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
        "(2831, 70)"
       ]
      },
-     "execution_count": 999,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1001,
+   "execution_count": 15,
    "id": "52f88081-118f-4639-a8b6-cc016ed931da",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1003,
+   "execution_count": 17,
    "id": "4e897aad-1d5b-4513-ad13-5124154e42a1",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
        "(2831, 62)"
       ]
      },
-     "execution_count": 1003,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1004,
+   "execution_count": 18,
    "id": "fa20d1b4-5c61-4918-bf33-f9546ecaf40c",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1006,
+   "execution_count": 20,
    "id": "b7020fff-9852-48ab-be1b-c673859c7306",
    "metadata": {},
    "outputs": [],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1007,
+   "execution_count": 21,
    "id": "a1817f6b-dcd4-4908-8b22-3a95815753ce",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1009,
+   "execution_count": 23,
    "id": "3a4bdc50-31e7-441f-8c30-bbf01e5c9946",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1012,
+   "execution_count": 26,
    "id": "7bb7adc5-81a4-4786-8ce4-242b4f405ad4",
    "metadata": {},
    "outputs": [],
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1013,
+   "execution_count": 27,
    "id": "b03c4f6c-6dfe-44ef-b95f-36a558b1c201",
    "metadata": {},
    "outputs": [
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1015,
+   "execution_count": 29,
    "id": "4cf92640-424e-4620-a21f-bea727bd7e38",
    "metadata": {},
    "outputs": [
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1017,
+   "execution_count": 31,
    "id": "4e6f54f2-a77e-4402-b6f9-9c54e9b7185e",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1007,7 @@
        "(2831, 59)"
       ]
      },
-     "execution_count": 1017,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1020,
+   "execution_count": 34,
    "id": "08aa99d6-44ab-4a75-a621-253a91e479b3",
    "metadata": {},
    "outputs": [],
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1021,
+   "execution_count": 35,
    "id": "7981da67-8f13-4750-9cb4-6c1e8fd6cef4",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1022,
+   "execution_count": 36,
    "id": "a2cb32a2-ac0c-4f15-956f-96d0ada99177",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1024,
+   "execution_count": 38,
    "id": "1b05d5f9-e772-4dd7-8102-67f763a46d09",
    "metadata": {},
    "outputs": [
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1025,
+   "execution_count": 39,
    "id": "16e8f7c2-f2c5-4a9a-9534-ba57d9fcf1d5",
    "metadata": {},
    "outputs": [],
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1026,
+   "execution_count": 40,
    "id": "6a9c3077-06bb-44d5-ac87-e77f30cb516e",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1030,
+   "execution_count": 44,
    "id": "5edba70a-022b-42cd-9156-65a1b86b971a",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1031,
+   "execution_count": 45,
    "id": "966ec8a4-3b32-4069-ab0b-88034d6e19ea",
    "metadata": {},
    "outputs": [
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1032,
+   "execution_count": 46,
    "id": "06f71bef-78cc-4e14-9a95-8d6fb6594fee",
    "metadata": {},
    "outputs": [
@@ -1875,11 +1875,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "01d7ab29-da44-4ec6-b9b5-640c8e724e9a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export the final dataset to CSV so it can be read in as we move forward in the project. \n",
+    "carlos_no.to_csv('carlos_balls_in_play.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
