--- a/Heinen_DSC540_Weeks_5&6.ipynb
+++ b/Heinen_DSC540_Weeks_5&6.ipynb
@@ -322,7 +322,7 @@
    "id": "4a78ca8e-c036-4ddf-88e2-1b75eacc8cb1",
    "metadata": {},
    "source": [
-    "## Filter out missing data:"
+    "## Filter Out Missing Data:"
    ]
   },
   {
@@ -412,7 +412,8 @@
    "source": [
     "# Evaluate age \n",
     "# Test if a value in a column is numeric and remove the rows\n",
-    "candy['Q3: AGE'] = pd.to_numeric(candy['Q3: AGE'], errors='coerce')  # Convert to numeric, coerce non-numeric values to NaN\n",
+    "# use errors='coerce' to leave null values as NaN\n",
+    "candy['Q3: AGE'] = pd.to_numeric(candy['Q3: AGE'], errors='coerce')  \n",
     "\n",
     "\n",
     "# Remove rows with NaN values in column 'Q3: AGE'\n",
@@ -725,7 +726,7 @@
    "id": "db9e6046-e85b-456e-b4bf-bdc85441ec51",
    "metadata": {},
    "source": [
-    "## Create hierarchical index\n",
+    "## Create Hierarchical Index\n",
     "\n",
     "create a hierarchical index where the age_bins is above age. "
    ]
@@ -1448,7 +1449,7 @@
    "source": [
     "# Read in Met Museum data set. \n",
     "# Use read_txt\n",
-    "# separator is a comma\n",
+    "# Separator is a comma\n",
     "met = pd.read_csv(\"MetObjects.txt\", sep=',')"
    ]
   },
@@ -1680,7 +1681,7 @@
     }
    ],
    "source": [
-    "# preview dataset. \n",
+    "# Preview dataset. \n",
     "met.head(5)\n"
    ]
   },
@@ -1768,7 +1769,7 @@
    "id": "7228bb9e-1d57-4620-9445-8c8c8396b87f",
    "metadata": {},
    "source": [
-    "## Convert between string and date time"
+    "## Convert Between String and Date Time"
    ]
   },
   {
@@ -2065,13 +2066,13 @@
    "source": [
     "# Clean Columns\n",
     "\n",
-    "# Use str.replace to remove whitespace \n",
+    "# Use str.strip to remove whitespace \n",
     "met_dates['Artist Begin Date'] = met_dates['Artist Begin Date'].str.strip()\n",
     "# Use apply and lambda functions to take only the first 4 characters of each value in the Artist Begin column\n",
     "met_dates['Artist Begin Date'] = met_dates['Artist Begin Date'].apply(lambda x: x[:4])\n",
     "\n",
     "\n",
-    "# Use str.replace to remove whitespace \n",
+    "# Use str.strip to remove whitespace \n",
     "met_dates['Artist End Date'] = met_dates['Artist End Date'].str.strip()\n",
     "# Use apply and lambda functions to take only the first 4 characters of each value in the Artist End column\n",
     "met_dates['Artist End Date'] = met_dates['Artist End Date'].apply(lambda x: x[:4])\n"
@@ -2301,7 +2302,7 @@
    "source": [
     "# Convert Object Begin to DateTime \n",
     "# use .apply(pd.to_datetime)\n",
-    "\n",
+    "# errors = 'coerce' leaves null NaN\n",
     "met_dates['Object Begin Date'] = met_dates['Object Begin Date'].apply(pd.to_datetime, format='%Y', errors='coerce')\n",
     "                                                   "
    ]
@@ -2314,7 +2315,8 @@
    "outputs": [],
    "source": [
     "# Convert Object End to DateTime\n",
-    " # use .appl(pd.to_datetime)\n",
+    "# use .appl(pd.to_datetime)\n",
+    "# errors = 'coerce' leaves null NaN\n",
     "\n",
     "met_dates['Object End Date'] = met_dates['Object End Date'].apply(pd.to_datetime, format='%Y', errors='coerce')"
    ]
@@ -2328,7 +2330,7 @@
    "source": [
     "# Convert Artist End to DateTime\n",
     " # use .appl(pd.to_datetime)\n",
-    "\n",
+    "# errors = 'coerce' leaves null NaN\n",
     "met_dates['Artist End Date'] = met_dates['Artist End Date'].apply(pd.to_datetime, format='%Y', errors='coerce')"
    ]
   },
@@ -2341,7 +2343,7 @@
    "source": [
     "# Convert Artist Begin to DateTime\n",
     " # use .appl(pd.to_datetime)\n",
-    "\n",
+    "# errors = 'coerce' leaves null NaN\n",
     "met_dates['Artist Begin Date'] = met_dates['Artist Begin Date'].apply(pd.to_datetime, format='%Y', errors='coerce')"
    ]
   },
@@ -2387,7 +2389,7 @@
    "id": "7b615b02-e4ae-45ee-b0f4-efcd9b8a14f2",
    "metadata": {},
    "source": [
-    "# Generate date range\n",
+    "# Generate Date Range\n",
     "\n",
     "Here we will evaluate the career length of a particular artist and then display the date range of their career. We will then find the midpoint of that artists career and display all the pieces in the Met Museum data set created in that year. "
    ]
@@ -2790,6 +2792,7 @@
    ],
    "source": [
     "# Calculate the midpoint of the year range \n",
+    "# First entry + (last entry -first entry) /2 \n",
     "midpoint = year_range[0] + (year_range[-1] - year_range[0]) / 2\n",
     "\n",
     "# Use strftime to format midpoint as year. \n",
