Cleveland indians fixed

--- a/Term Project/Heinen_DSC540_Milestone_4.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 147,
    "id": "6040a614-674e-48c4-a70f-d25c712b0d6b",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 151,
    "id": "4c18dd80-d667-4f5a-9bdc-45eba489151e",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 153,
    "id": "1881089e-6a70-41be-8df7-cc8e97157f2f",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 155,
    "id": "2c5feef9-21e2-45ad-bc61-aa72d5def3ce",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "9       Boston Red Sox[nb 3]         Open  42.35  -71.10    16  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 158,
    "id": "a7a63042-24bf-4a0a-a7a7-6309fac78d38",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 160,
    "id": "13f39157-9697-43be-b9fb-dff31672a57d",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "[10 rows x 59 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 163,
    "id": "98f3fc3a-c6e7-469e-b350-3c77304ab30d",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 165,
    "id": "a5e747d3-a179-45d3-b555-7ebb61c14810",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "9        Detroit Tigers         det"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 167,
    "id": "aee18a79-5dce-441c-b44e-7ed0925d5be7",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "9        Detroit Tigers         DET"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 169,
    "id": "f7d7a70f-d53a-4732-b799-ae9981c61771",
    "metadata": {},
    "outputs": [],
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 171,
    "id": "11aba523-3f94-4dbe-8641-62043b1a4759",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 173,
    "id": "1302717d-9b31-4b89-b54d-def4b30056f1",
    "metadata": {},
    "outputs": [],
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 175,
    "id": "73b45c1c-c1ad-41ad-bf0f-7f61e03d2ead",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1026,7 @@
        "      <td>Open</td>\n",
        "      <td>39.91</td>\n",
        "      <td>-75.17</td>\n",
-       "      <td>19.0</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1043,14 +1043,14 @@
        "      <td>...</td>\n",
        "      <td>Cleveland Indians</td>\n",
        "      <td>CLE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Progressive Field</td>\n",
+       "      <td>Cleveland, Ohio</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Cleveland Indians</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1067,14 +1067,14 @@
        "      <td>...</td>\n",
        "      <td>Cleveland Indians</td>\n",
        "      <td>CLE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Progressive Field</td>\n",
+       "      <td>Cleveland, Ohio</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Cleveland Indians</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1098,7 +1098,7 @@
        "      <td>Open</td>\n",
        "      <td>40.45</td>\n",
        "      <td>-80.01</td>\n",
-       "      <td>724.0</td>\n",
+       "      <td>724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1115,14 +1115,14 @@
        "      <td>...</td>\n",
        "      <td>Cleveland Indians</td>\n",
        "      <td>CLE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Progressive Field</td>\n",
+       "      <td>Cleveland, Ohio</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Cleveland Indians</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1146,7 +1146,7 @@
        "      <td>Open</td>\n",
        "      <td>39.05</td>\n",
        "      <td>-94.48</td>\n",
-       "      <td>886.0</td>\n",
+       "      <td>886</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1170,7 +1170,7 @@
        "      <td>Open</td>\n",
        "      <td>39.91</td>\n",
        "      <td>-75.17</td>\n",
-       "      <td>19.0</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1187,14 +1187,14 @@
        "      <td>...</td>\n",
        "      <td>Cleveland Indians</td>\n",
        "      <td>CLE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Progressive Field</td>\n",
+       "      <td>Cleveland, Ohio</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Cleveland Indians</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1211,14 +1211,14 @@
        "      <td>...</td>\n",
        "      <td>Cleveland Indians</td>\n",
        "      <td>CLE</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Progressive Field</td>\n",
+       "      <td>Cleveland, Ohio</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Cleveland Indians</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1242,7 +1242,7 @@
        "      <td>Open</td>\n",
        "      <td>44.98</td>\n",
        "      <td>-93.28</td>\n",
-       "      <td>840.0</td>\n",
+       "      <td>840</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1288,44 +1288,44 @@
        "\n",
        "               team_name abreviation            Ballpark  \\\n",
        "0  Philadelphia Phillies         PHI  Citizens Bank Park   \n",
-       "1      Cleveland Indians         CLE                 NaN   \n",
-       "2      Cleveland Indians         CLE                 NaN   \n",
+       "1      Cleveland Indians         CLE   Progressive Field   \n",
+       "2      Cleveland Indians         CLE   Progressive Field   \n",
        "3     Pittsburgh Pirates         PIT            PNC Park   \n",
-       "4      Cleveland Indians         CLE                 NaN   \n",
+       "4      Cleveland Indians         CLE   Progressive Field   \n",
        "5     Kansas City Royals          KC    Kauffman Stadium   \n",
        "6  Philadelphia Phillies         PHI  Citizens Bank Park   \n",
-       "7      Cleveland Indians         CLE                 NaN   \n",
-       "8      Cleveland Indians         CLE                 NaN   \n",
+       "7      Cleveland Indians         CLE   Progressive Field   \n",
+       "8      Cleveland Indians         CLE   Progressive Field   \n",
        "9        Minnesota Twins         MIN        Target Field   \n",
        "\n",
        "                         City Surface                   Team Roof type    Lat  \\\n",
        "0  Philadelphia, Pennsylvania   Grass  Philadelphia Phillies      Open  39.91   \n",
-       "1                         NaN     NaN                    NaN       NaN    NaN   \n",
-       "2                         NaN     NaN                    NaN       NaN    NaN   \n",
+       "1             Cleveland, Ohio   Grass      Cleveland Indians      Open  41.50   \n",
+       "2             Cleveland, Ohio   Grass      Cleveland Indians      Open  41.50   \n",
        "3    Pittsburgh, Pennsylvania   Grass     Pittsburgh Pirates      Open  40.45   \n",
-       "4                         NaN     NaN                    NaN       NaN    NaN   \n",
+       "4             Cleveland, Ohio   Grass      Cleveland Indians      Open  41.50   \n",
        "5       Kansas City, Missouri   Grass     Kansas City Royals      Open  39.05   \n",
        "6  Philadelphia, Pennsylvania   Grass  Philadelphia Phillies      Open  39.91   \n",
-       "7                         NaN     NaN                    NaN       NaN    NaN   \n",
-       "8                         NaN     NaN                    NaN       NaN    NaN   \n",
+       "7             Cleveland, Ohio   Grass      Cleveland Indians      Open  41.50   \n",
+       "8             Cleveland, Ohio   Grass      Cleveland Indians      Open  41.50   \n",
        "9      Minneapolis, Minnesota   Grass        Minnesota Twins      Open  44.98   \n",
        "\n",
-       "    Long    Alt  \n",
-       "0 -75.17   19.0  \n",
-       "1    NaN    NaN  \n",
-       "2    NaN    NaN  \n",
-       "3 -80.01  724.0  \n",
-       "4    NaN    NaN  \n",
-       "5 -94.48  886.0  \n",
-       "6 -75.17   19.0  \n",
-       "7    NaN    NaN  \n",
-       "8    NaN    NaN  \n",
-       "9 -93.28  840.0  \n",
+       "    Long  Alt  \n",
+       "0 -75.17   19  \n",
+       "1 -81.69  673  \n",
+       "2 -81.69  673  \n",
+       "3 -80.01  724  \n",
+       "4 -81.69  673  \n",
+       "5 -94.48  886  \n",
+       "6 -75.17   19  \n",
+       "7 -81.69  673  \n",
+       "8 -81.69  673  \n",
+       "9 -93.28  840  \n",
        "\n",
        "[10 rows x 69 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
