looping through data

--- a/Term Project/Heinen_DSC540_Milestone_4.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_4.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "id": "4c18dd80-d667-4f5a-9bdc-45eba489151e",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "id": "1881089e-6a70-41be-8df7-cc8e97157f2f",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 6,
    "id": "2c5feef9-21e2-45ad-bc61-aa72d5def3ce",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "9       Boston Red Sox[nb 3]         Open  42.35  -71.10    16  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 9,
    "id": "a7a63042-24bf-4a0a-a7a7-6309fac78d38",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 11,
    "id": "13f39157-9697-43be-b9fb-dff31672a57d",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "[10 rows x 59 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 14,
    "id": "98f3fc3a-c6e7-469e-b350-3c77304ab30d",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 16,
    "id": "a5e747d3-a179-45d3-b555-7ebb61c14810",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "9        Detroit Tigers         det"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 18,
    "id": "aee18a79-5dce-441c-b44e-7ed0925d5be7",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "9        Detroit Tigers         DET"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 20,
    "id": "f7d7a70f-d53a-4732-b799-ae9981c61771",
    "metadata": {},
    "outputs": [],
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 22,
    "id": "11aba523-3f94-4dbe-8641-62043b1a4759",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 24,
    "id": "1302717d-9b31-4b89-b54d-def4b30056f1",
    "metadata": {},
    "outputs": [],
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 26,
    "id": "73b45c1c-c1ad-41ad-bf0f-7f61e03d2ead",
    "metadata": {},
    "outputs": [
@@ -1325,7 +1325,7 @@
        "[10 rows x 69 columns]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,11 +1338,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "fbf59d99-0d4e-4c0a-b8e6-098c197c8722",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1936, 61)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "carlos.shape"
+   ]
   },
   {
    "cell_type": "code",
@@ -1354,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "13431b68-4781-4035-b001-2c6160672262",
    "metadata": {},
    "outputs": [
@@ -1396,43 +1409,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "ea757dbd-b1e3-4a68-aab6-beffa62bc387",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'coord': {'lon': -87.97, 'lat': 43.03},\n",
-       " 'weather': [{'id': 800,\n",
-       "   'main': 'Clear',\n",
-       "   'description': 'clear sky',\n",
-       "   'icon': '01d'}],\n",
+       "{'coord': {'lon': -87.973, 'lat': 43.0252},\n",
+       " 'weather': [{'id': 804,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 289.44,\n",
-       "  'feels_like': 289.29,\n",
-       "  'temp_min': 287.61,\n",
-       "  'temp_max': 290.22,\n",
-       "  'pressure': 1023,\n",
-       "  'humidity': 83,\n",
-       "  'sea_level': 1023,\n",
-       "  'grnd_level': 998},\n",
+       " 'main': {'temp': 297.53,\n",
+       "  'feels_like': 298.09,\n",
+       "  'temp_min': 296.38,\n",
+       "  'temp_max': 298.6,\n",
+       "  'pressure': 1017,\n",
+       "  'humidity': 79,\n",
+       "  'sea_level': 1017,\n",
+       "  'grnd_level': 991},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 1.54, 'deg': 300},\n",
-       " 'clouds': {'all': 0},\n",
-       " 'dt': 1721998394,\n",
+       " 'wind': {'speed': 6.17, 'deg': 20, 'gust': 10.8},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1722868599,\n",
        " 'sys': {'type': 2,\n",
        "  'id': 2081761,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1721990214,\n",
-       "  'sunset': 1722043178},\n",
+       "  'sunrise': 1722854847,\n",
+       "  'sunset': 1722906492},\n",
        " 'timezone': -18000,\n",
        " 'id': 5278580,\n",
        " 'name': 'West Milwaukee',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 224,
    "id": "a0469e77-e0f0-4ddf-9300-1e0a20a98b49",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 226,
    "id": "3315c5ad-5f9a-4544-9095-aa09ae4a496b",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1547,7 @@
        "{'code': 400000, 'message': 'requested data is out of allowed range'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,8 +1559,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "0a13dff4-7e42-4b86-9b8a-7bb0f0982e1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lat': 43.03,\n",
+       " 'lon': -87.97,\n",
+       " 'timezone': 'America/Chicago',\n",
+       " 'timezone_offset': -18000,\n",
+       " 'data': [{'dt': 1529452800,\n",
+       "   'sunrise': 1529403142,\n",
+       "   'sunset': 1529458448,\n",
+       "   'temp': 289.18,\n",
+       "   'feels_like': 289.21,\n",
+       "   'pressure': 1015,\n",
+       "   'humidity': 91,\n",
+       "   'dew_point': 287.71,\n",
+       "   'clouds': 100,\n",
+       "   'visibility': 9000,\n",
+       "   'wind_speed': 3.1,\n",
+       "   'wind_deg': 30,\n",
+       "   'weather': [{'id': 701,\n",
+       "     'main': 'Mist',\n",
+       "     'description': 'mist',\n",
+       "     'icon': '50d'}]}]}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.get('https://api.openweathermap.org/data/3.0/onecall/timemachine?lat=43.0300000&lon=-87.9700000&dt=1529452800&appid=6b1915f8a711e908db855ea4824218f5')\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e086d494-fd32-4938-8db0-d8a66340164a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "\n",
+    "\n",
+    "# Define a function to make the API call and return the JSON data\n",
+    "def call_api(row):\n",
+    "    url = 'https://api.openweathermap.org/data/3.0/onecall/timemachine?'\n",
+    "    params = {\n",
+    "        'lat': row['Lat'],\n",
+    "        'lon': row['Long'],\n",
+    "        'dt': row['unix_time'],\n",
+    "        'appid': '6b1915f8a711e908db855ea4824218f5'\n",
+    "        \n",
+    "    }\n",
+    "    response = requests.get(url, params=params)\n",
+    "    return response.json()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7cb1e662-aab6-4f9e-be95-b268ddcbf51c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an empty list to store the returned JSON data\n",
+    "json_data_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "66e72953-c282-456d-b69b-fadb506f81ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loop through the DataFrame, call the API for each row, and store the returned JSON data\n",
+    "for index, row in carlos_lo.head(50).iterrows():\n",
+    "    json_data = call_api(row)\n",
+    "    json_data = call_api(row)\n",
+    "    json_data_list.append(json_data)\n",
+    "\n",
+    "\n",
+    "# Now result_df contains the JSON data returned from the API calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fd36228f-cf88-4923-af9c-848cf53d9c7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>timezone</th>\n",
+       "      <th>timezone_offset</th>\n",
+       "      <th>data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39.91</td>\n",
+       "      <td>-75.17</td>\n",
+       "      <td>America/New_York</td>\n",
+       "      <td>-14400</td>\n",
+       "      <td>[{'dt': 1529452800, 'sunrise': 1529400718, 'su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>America/New_York</td>\n",
+       "      <td>-14400</td>\n",
+       "      <td>[{'dt': 1432512000, 'sunrise': 1432461618, 'su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>America/New_York</td>\n",
+       "      <td>-14400</td>\n",
+       "      <td>[{'dt': 1558915200, 'sunrise': 1558864737, 'su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.45</td>\n",
+       "      <td>-80.01</td>\n",
+       "      <td>America/New_York</td>\n",
+       "      <td>-14400</td>\n",
+       "      <td>[{'dt': 1685836800, 'sunrise': 1685785884, 'su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>America/New_York</td>\n",
+       "      <td>-14400</td>\n",
+       "      <td>[{'dt': 1568505600, 'sunrise': 1568459154, 'su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>39.05</td>\n",
+       "      <td>-94.48</td>\n",
+       "      <td>America/Chicago</td>\n",
+       "      <td>-18000</td>\n",
+       "      <td>[{'dt': 1649721600, 'sunrise': 1649677611, 'su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>39.91</td>\n",
+       "      <td>-75.17</td>\n",
+       "      <td>America/New_York</td>\n",
+       "      <td>-14400</td>\n",
+       "      <td>[{'dt': 1529971200, 'sunrise': 1529919201, 'su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>America/New_York</td>\n",
+       "      <td>-14400</td>\n",
+       "      <td>[{'dt': 1503360000, 'sunrise': 1503312130, 'su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>41.50</td>\n",
+       "      <td>-81.69</td>\n",
+       "      <td>America/New_York</td>\n",
+       "      <td>-14400</td>\n",
+       "      <td>[{'dt': 1563494400, 'sunrise': 1563444488, 'su...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>44.98</td>\n",
+       "      <td>-93.28</td>\n",
+       "      <td>America/Chicago</td>\n",
+       "      <td>-18000</td>\n",
+       "      <td>[{'dt': 1715126400, 'sunrise': 1715079196, 'su...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     lat    lon          timezone  timezone_offset  \\\n",
+       "0  39.91 -75.17  America/New_York           -14400   \n",
+       "1  41.50 -81.69  America/New_York           -14400   \n",
+       "2  41.50 -81.69  America/New_York           -14400   \n",
+       "3  40.45 -80.01  America/New_York           -14400   \n",
+       "4  41.50 -81.69  America/New_York           -14400   \n",
+       "5  39.05 -94.48   America/Chicago           -18000   \n",
+       "6  39.91 -75.17  America/New_York           -14400   \n",
+       "7  41.50 -81.69  America/New_York           -14400   \n",
+       "8  41.50 -81.69  America/New_York           -14400   \n",
+       "9  44.98 -93.28   America/Chicago           -18000   \n",
+       "\n",
+       "                                                data  \n",
+       "0  [{'dt': 1529452800, 'sunrise': 1529400718, 'su...  \n",
+       "1  [{'dt': 1432512000, 'sunrise': 1432461618, 'su...  \n",
+       "2  [{'dt': 1558915200, 'sunrise': 1558864737, 'su...  \n",
+       "3  [{'dt': 1685836800, 'sunrise': 1685785884, 'su...  \n",
+       "4  [{'dt': 1568505600, 'sunrise': 1568459154, 'su...  \n",
+       "5  [{'dt': 1649721600, 'sunrise': 1649677611, 'su...  \n",
+       "6  [{'dt': 1529971200, 'sunrise': 1529919201, 'su...  \n",
+       "7  [{'dt': 1503360000, 'sunrise': 1503312130, 'su...  \n",
+       "8  [{'dt': 1563494400, 'sunrise': 1563444488, 'su...  \n",
+       "9  [{'dt': 1715126400, 'sunrise': 1715079196, 'su...  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a new DataFrame from the list of JSON data\n",
+    "carlos_weather = pd.DataFrame(json_data_list)\n",
+    "\n",
+    "# Preview \n",
+    "carlos_weather.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80243fc7-6e06-4de6-879f-d4e269c8cb9a",
    "metadata": {},
    "outputs": [],
    "source": []
